contest page final

--- a/markup/_layouts/_content/_homepage/upcoming_contest.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest.jade
@@ -31,7 +31,8 @@ div.row
                                         th Payout
                                         th ENTRY
                                         th Status
-                            div.nl-table-scroll.height-max
+                            //- div.nl-table-scroll.height-max
+                            div.nl-table-scroll2
                                 table.table.table-striped
                                     tbody
                                         tr
