--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -120,6 +120,26 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
+                                                    td STARTED
+                                                tr
+                                                    td WK3 G Joe Theismann 5 team Challenge
+                                                    td 10
+                                                    td 71/100
+                                                    td 3
+                                                    td 1000
+                                                    td
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
+                                                    td STARTED
+                                                tr
+                                                    td WK3 G Joe Theismann 5 team Challenge
+                                                    td 10
+                                                    td 71/100
+                                                    td 3
+                                                    td 1000
+                                                    td
 
                                                     td.st-full FULL
                                                 tr
@@ -214,7 +234,7 @@ section.nl-section.nl-players.nl-contests
                             tr
                                 td
                                     a(href='enter_contests.html')
-                                        button.btn.btn-primary.btn-sm(type='button') enter
+                                        button.btn.btn-primary.button-enter(type='button') enter
                                 td
                                     button.btn.btn-default(type="button") Payout
                                 td
