--- a/markup/_layouts/_content/_homepage/upcoming_contest.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest.jade
@@ -105,6 +105,96 @@ div.row
                                             td 3
                                             td 1000
                                             td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
 
                                             td.st-full FULL
                                         tr
