updated to list view on top 5 managers instead of table implemented responsive ness, finished enter contest page and contest pages

--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -141,18 +141,21 @@ div.nl-section.nl-create-team.homepage-field
 			div.nl-team-info
 				div.nl-team-data
 					div.row 
-						div.col-4.col-lg-4
+						div.col-3.col-lg-4
 							button.btn.btn-primary EDIT
-						div.col-8.col-lg-8
+						div.col-9.col-lg-8
 							div.row
-								div.col-8 SALARY CAP:
-								div.col-4
+								div.col-7 SALARY CAP
+								div.col-5
 									span $65000
 					
-								div.col-8 TOTAL SALARY:
-								div.col-4
+								div.col-7 TOTAL SALARY
+								div.col-5
 									span $46730
 					
-								div.col-8 Available:
-								div.col-4
+								div.col-7 Available
+								div.col-5
 									span.avalibe $25000
+								div.col-7 PROJECTION
+								div.col-5
+									span.avalibe 133
