--- a/markup/_layouts/_content/homepage-content.jade
+++ b/markup/_layouts/_content/homepage-content.jade
@@ -19,7 +19,7 @@ section.nl-section.homepage
 				include _homepage/top5-manager
 
 		div.row.contests.bottom-teams-contests-section
-			div.col-12.col-lg-5.col-xl-5.field
+			div.col-12.col-sm-6.offset-sm-3.col-lg-5.offset-lg-0.col-xl-5.field
 				include _homepage/field
 			div.col-12.col-lg-6.offset-lg-1.offset-xl-1.col-xl-6
 				include _homepage/upcoming_contest
