border radius fix for homepage upcoming contests v2

--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -1525,6 +1525,8 @@
   .homepage {
     .tab-content {
       border-radius: 0 !important;
+      border-bottom-right-radius: 0.625rem;
+      border-bottom-left-radius: 0.625rem;
     }
     .table {
       border-radius: 0 !important; 
