helmet update to create teams page and my teams, prevent from hidding them

--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -734,7 +734,7 @@ section.nl-section.nl-players.nl-create-team
                             .col-12
                                 div.nl-team-card.table-data-field
                                     h3 team NLC2
-                                    <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                                    <img src="assets/img/helmet.png" alt="helmet">
 
                         .row
                             .col-12
