--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -19,7 +19,7 @@ section.nl-section.nl-my-teams
                         .col-12
                             div.nl-team-card.table-data-field
                                 p team NLC2
-                                <img src="assets/img/helmet-2" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
+                                <img src="assets/img/helmet-2" alt="helmet">
 
                     .row
                         .col-12
@@ -114,7 +114,7 @@ section.nl-section.nl-my-teams
                         .col-12
                             div.nl-team-card.table-data-field
                                 p team NLC2
-                                <img src="assets/img/helmet-3" alt="helmet" class="hidden-xs-down">
+                                <img src="assets/img/helmet-3" alt="helmet">
 
                     .row
                         .col-12
@@ -208,7 +208,7 @@ section.nl-section.nl-my-teams
                         .col-12
                             div.nl-team-card.table-data-field
                                 p team NLC2
-                                <img src="assets/img/helmet-2" alt="helmet" class="hidden-xs-down">
+                                <img src="assets/img/helmet-2" alt="helmet">
 
                     .row
                         .col-12
@@ -302,7 +302,7 @@ section.nl-section.nl-my-teams
                         .col-12
                             div.nl-team-card.table-data-field
                                 p team NLC2
-                                <img src="assets/img/helmet-3" alt="helmet" class="hidden-xs-down">
+                                <img src="assets/img/helmet-3" alt="helmet">
 
                     .row
                         .col-12
