fixed header color, set window size experiments

--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -297,6 +297,36 @@ section.nl-section.nl-players.nl-contests
                                     td Username
                                     td MyTeamName
                                     td 37.90
+                                tr
+                                    td 1
+                                    td Username
+                                    td MyTeamName
+                                    td 37.90
+                                tr
+                                    td 1
+                                    td Username
+                                    td MyTeamName
+                                    td 37.90
+                                tr
+                                    td 1
+                                    td Username
+                                    td MyTeamName
+                                    td 37.90
+                                tr
+                                    td 1
+                                    td Username
+                                    td MyTeamName
+                                    td 37.90
+                                tr
+                                    td 1
+                                    td Username
+                                    td MyTeamName
+                                    td 37.90
+                                tr
+                                    td 1
+                                    td Username
+                                    td MyTeamName
+                                    td 37.90
                     div.nl-info-table-button
                         button.btn.btn-warning.btn-lg Withdraw
 
