--- a/markup/_scss/sections/_nl-contests.scss
+++ b/markup/_scss/sections/_nl-contests.scss
@@ -4,6 +4,10 @@
     max-height: 34.5rem;
   }
 
+  .nl-contest-info-table .nl-table-scroll2 {
+    max-height: 14.25rem;
+  }
+
   padding-left: calculateRem(20px);
   padding-right: calculateRem(20px);
   padding-top: calculateRem(30px);
