--- a/markup/_layouts/_content/login-content.jade
+++ b/markup/_layouts/_content/login-content.jade
@@ -7,7 +7,7 @@ section.nl-section.login-wrapper
                 .block-dialog(role='document')
                 .block-content
                     .block-header
-                        h2#loginSectionLabel.modal-title LoginTEST
+                        h2#loginSectionLabel.modal-title Login
                     .block-body
                         form.form-signin
                             .input-group
