--- a/markup/_scss/sections/_faq.scss
+++ b/markup/_scss/sections/_faq.scss
@@ -1,7 +1,7 @@
 .nl-faq {
   padding: 1.875rem;
   background: url(../img/stadion_detail.jpg) 0 0 no-repeat fixed;
-  //background-size: cover;
+  background-size: cover;
   background-position: bottom;
   color: #061540;
 
