--- a/markup/_scss/layouts/_registration-modal.scss
+++ b/markup/_scss/layouts/_registration-modal.scss
@@ -51,7 +51,7 @@
     border: none;
   }
   .modal-body, .modal-footer {
-    background-color: #1d2d4e;
+    background-color: #0f254f;
   }
 
   .modal-body {
