--- a/markup/_scss/sections/_about.scss
+++ b/markup/_scss/sections/_about.scss
@@ -1,12 +1,12 @@
 .nl-about-section{
   background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
   background-size: cover;
-  color: #121a31;
+  color: #061540;
   padding-bottom: 10rem;
 }
 
 .nl-about-wrapper{
-  background: linear-gradient(to top, #121a31, #1f3658);
+  background: linear-gradient(to top, #061540, #1f3658);
   border-radius: 0.625rem;
   color: #fff;
   box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
