--- a/markup/_scss/sections/_change-password.scss
+++ b/markup/_scss/sections/_change-password.scss
@@ -1,7 +1,7 @@
 .change-password-wrapper{
   background: url(../img/nl-players-bg.jpg) top center no-repeat fixed;
   background-size: cover;
-  color: #121a31;
+  color: #061540;
   padding-bottom: 10rem;
 }
 #changePasswordSection {
