--- a/markup/_scss/sections/_contact.scss
+++ b/markup/_scss/sections/_contact.scss
@@ -2,7 +2,7 @@
   background: url(../img/stadion_full.jpg) 0 0 no-repeat;
   background-size: cover;
   background-position: bottom;
-  color: #121a31;
+  color: #061540;
   padding: 3rem;
 
 }
@@ -37,7 +37,7 @@
       margin: 0 auto;
       font-size: calculateRem(34px);
       text-align: center;
-      color: #121a31;
+      color: #061540;
       font-weight: 500;
     }
     .close {
@@ -75,7 +75,7 @@
       padding-left: calculateRem(50px);
       a{
         text-decoration: none;
-        color: #121a31;
+        color: #061540;
         margin-left: 0;
       }
     }
@@ -102,7 +102,7 @@
       margin-left: 15px;
     }
     p{
-      color: #121a31;
+      color: #061540;
       font-size: calculateRem(24px);
       line-height: 1.4;
 
