--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -1565,7 +1565,7 @@
 
   .nav-tabs {
     padding: 10px 10px 0 10px;
-    background-color: #1d2d4e;
+    background-color: #0f254f;
     margin-bottom: -3px;
     overflow: hidden;
     -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
