--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -193,7 +193,7 @@
   margin-right: auto;
   .nl-team-name {
     width: 100%;
-    background: #121a31;
+    background: #061540;
     color: #FFF;
     @include fontSize(21px);
     font-weight: 700;
