--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -385,12 +385,12 @@
   }
 
 	.nl-contest-info-table {
-		background-color: #121a31;
+		background-color: #061540;
 	}
 
 	.table-heading {
 	    width: 100%;
-	    background: #121a31;
+	    background: #061540;
 	    color: #e48706;
 	    font-size: 21px;
 	    font-size: 1.3125rem;
